--- a/index.html
+++ b/index.html
@@ -22,15 +22,20 @@ div {
 <body>
 
 <h2 align="middle">Europe Trip, Summer 2022</h2> 
-<h3 align="middle">Chirag Gokani</h3>
+
  
 <div>
 
 <p id="top" class="bottom-three" align="middle">This is an auditory reflection of my travels in Europe.</p>
+
+
+<img src="europe_map.png" width="430" height="393" style = "display: block; margin-left: auto; margin-right: auto;"/>
+
+	
 	
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
-<h4>London</h4>
+<h3>1. London</h3>
 
  <!--
  -->
@@ -44,7 +49,22 @@ div {
 
 <hr>
 
-<h4>Paris</h4>
+<h3>2. Oxford</h3>
+
+ <!--
+ -->
+
+<h4>title</h4>
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+	
+<br>
+
+<hr>
+
+	
+	
+	
+<h3>3. Paris</h3>
 
  <!--
  -->
@@ -57,36 +77,7 @@ div {
 <hr>
 
 
-<h4>Bilbao</h4>
-
- <!--
- -->
-
-<h4>title</h4>
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-	
-<br>
-
-<hr>
-
-
-
-<h4>Santander</h4>
-
- <!--
- -->
-
-<h4>title</h4>
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-	
-<br>
-
-<hr>
-
-
-
-
-<h4>Seville</h4>
+<h3>4. Bilbao</h3>
 
  <!--
  -->
@@ -100,10 +91,7 @@ div {
 
 
 
-
-
-
-<h4>Madrid</h4>
+<h3>5. Santander</h3>
 
  <!--
  -->
@@ -117,6 +105,39 @@ div {
 
 
 
+
+<h3>6. Seville</h3>
+
+ <!--
+ -->
+
+<h4>title</h4>
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+	
+<br>
+
+<hr>
+
+
+
+
+
+
+<h3>7. Madrid</h3>
+
+ <!--
+ -->
+
+<h4>title</h4>
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+	
+<br>
+
+	
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+
+
+<h3>A few pictures...</h3>
 
 
 <img src="" width="652" height="488" style = "display: block; margin-left: auto; margin-right: auto;"/>
