--- a/index.html
+++ b/index.html
@@ -26,27 +26,53 @@ div {
  
 <div>
 
-<p id="top" class="bottom-three" align="middle">This is an auditory reflection of my travels in Europe.</p>
+	
+<p id="top" class="bottom-three" align="middle">This is an auditory reflection of my travels in Europe, July 1st-July 20th, 2022.</p>
 
 
 <img src="europe_map.png" width="430" height="393" style = "display: block; margin-left: auto; margin-right: auto;"/>
 
-	
-	<h4>title</h4>
-<h4><audio controls><source src="message_from_dany.mp3" type="audio/mpeg"></audio></h4>	
+<bloquote>Silence is both porous and generous enough to receive both noise and no noise, and forms the ground from which we both see through the illusion and separation from God; and are trained by the ordeals of life rooted in the mystery in whom we live and move and have our being.</blockquote>
+<p align="right">&mdash;Fr. Martin Laird</p>	
 	
 <br>
 	
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
+	
+
+<h3>0. Pre-departure</h3>
+	
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<p>"Light that is black because of the excess of its glow" </p>
+<br>
+
+	
+<h4><audio controls><source src="06232022.mp3" type="audio/mpeg"></audio></h4>	
+<p>"Break the ice"</p>
+<br>
+	
+	
+<h4><audio controls><source src="message_from_dany.mp3" type="audio/mpeg"></audio></h4>	
+<p>Echo</p>
+<br>	
+
+	
+<h4><audio controls><source src="dany_chords.mp3" type="audio/mpeg"></audio></h4>		
+<p>Echo</p>
+<br>	
+	
+<hr>		
+	
+	
 <h3>1. London</h3>
 
  <!--
  -->
 
-<h4>title</h4>
+
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-	
+<p></p>
 <br>
 
 
@@ -58,9 +84,8 @@ div {
  <!--
  -->
 
-<h4>title</h4>
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-	
+<p></p>
 <br>
 
 <hr>
@@ -73,11 +98,10 @@ div {
  <!--
  -->
 
-<h4>title</h4>
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-	
+<p></p>
 <br>
-
+	
 <hr>
 
 
@@ -86,9 +110,9 @@ div {
  <!--
  -->
 
-<h4>title</h4>
+
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-	
+<p></p>	
 <br>
 
 <hr>
@@ -100,9 +124,9 @@ div {
  <!--
  -->
 
-<h4>title</h4>
+
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-	
+<p></p>		
 <br>
 
 <hr>
@@ -115,9 +139,9 @@ div {
  <!--
  -->
 
-<h4>title</h4>
+
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-	
+<p></p>		
 <br>
 
 <hr>
@@ -132,9 +156,9 @@ div {
  <!--
  -->
 
-<h4>title</h4>
+
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-	
+<p></p>	
 <br>
 
 	
