--- a/index.html
+++ b/index.html
@@ -44,22 +44,17 @@ div {
 <h3>0. Pre-departure</h3>
 	
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<p>"Light that is black because of the excess of its glow" </p>
+<p>"Night is called 'black light,' light that is black because of the excess of its glow." &mdash;Seyyed Hossein Nasr</p>
 <br>
 
 	
 <h4><audio controls><source src="06232022.mp3" type="audio/mpeg"></audio></h4>	
-<p>"Break the ice"</p>
+<p>"We come from silence, but we are in sound; it is through sound that we go back to God." &mdash;Seyyed Hossein Nasr</p>
 <br>
-	
-	
-<h4><audio controls><source src="message_from_dany.mp3" type="audio/mpeg"></audio></h4>	
-<p>Echo</p>
-<br>	
 
 	
 <h4><audio controls><source src="dany_chords.mp3" type="audio/mpeg"></audio></h4>		
-<p>Echo</p>
+<p>"We are in this world because the primal silence was broken by the sacred silence itself; otherwise there would be no world. But that primordial silence, which somehow always remains in the sound of its own creation, had provided for us the means of returning unto it through the Divine sound. And one of the concomitance of this, is the realization of who we are...that our self is the Self of all selves. And this is the metaphysical foundation for all compassion. And so no matter how a great a metaphysician one is, how great a thinker, there is no gate to Heaven without compassion; there is no blessed soul without silence." &mdash;Seyyed Hossein Nasr</p>
 <br>	
 	
 <hr>		
@@ -72,7 +67,7 @@ div {
 
 
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<p></p>
+<p>"Night is...black light: light that is black because of the excess of its manifestation." </p>
 <br>
 
 
