--- a/index.html
+++ b/index.html
@@ -26,36 +26,31 @@ div {
  
 <div>
 
-	
-<p id="top" class="bottom-three" align="middle">This is an auditory reflection of my travels in Europe, July 1st-July 20th, 2022.</p>
-
 
 <img src="europe_map.png" width="430" height="393" style = "display: block; margin-left: auto; margin-right: auto;"/>
 
 <bloquote>Silence is both porous and generous enough to receive both noise and no noise, and forms the ground from which we both see through the illusion and separation from God; and are trained by the ordeals of life rooted in the mystery in whom we live and move and have our being.</blockquote>
 <p align="right">&mdash;Fr. Martin Laird</p>	
 	
+<bloquote>We come from silence, but we are in sound; it is through sound that we go back to God.</blockquote>
+<p align="right">&mdash;Seyyed Hossein Nasr</p>	
+	
 <br>
 	
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
 	
-
-<h3>0. Pre-departure</h3>
+<h3>0. Bon voyage</h3>
 	
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<p>"Night is called 'black light,' light that is black because of the excess of its glow." &mdash;Seyyed Hossein Nasr</p>
 <br>
 
 	
 <h4><audio controls><source src="06232022.mp3" type="audio/mpeg"></audio></h4>	
-<p>"We come from silence, but we are in sound; it is through sound that we go back to God." &mdash;Seyyed Hossein Nasr</p>
 <br>
 
 	
 <h4><audio controls><source src="dany_chords.mp3" type="audio/mpeg"></audio></h4>		
-<p>"We are in this world because the primal silence was broken by the sacred silence itself; otherwise there would be no world. But that primordial silence, which somehow always remains in the sound of its own creation, had provided for us the means of returning unto it through the Divine sound. And one of the concomitance of this, is the realization of who we are...that our self is the Self of all selves. And this is the metaphysical foundation for all compassion. And so no matter how a great a metaphysician one is, how great a thinker, there is no gate to Heaven without compassion; there is no blessed soul without silence." &mdash;Seyyed Hossein Nasr</p>
-<br>	
 	
 <hr>		
 	
