--- a/index.html
+++ b/index.html
@@ -40,19 +40,17 @@ div {
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
 	
-<h3>0. Bon voyage</h3>
+<h3>Bon voyage...</h3>
 	
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<br>
 
-	
 <h4><audio controls><source src="06232022.mp3" type="audio/mpeg"></audio></h4>	
-<br>
+
+<h4><audio controls><source src="message_from_dany.mp3" type="audio/mpeg"></audio></h4>	
 
 	
 <h4><audio controls><source src="dany_chords.mp3" type="audio/mpeg"></audio></h4>		
 	
-<hr>		
 	
 	
 <h3>1. London</h3>
@@ -62,9 +60,11 @@ div {
 
 
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<p>"Night is...black light: light that is black because of the excess of its manifestation." </p>
-<br>
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
 
+	
 
 
 <hr>
@@ -75,8 +75,9 @@ div {
  -->
 
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<p></p>
-<br>
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
 
 <hr>
 
@@ -89,8 +90,9 @@ div {
  -->
 
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<p></p>
-<br>
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
 	
 <hr>
 
@@ -102,8 +104,9 @@ div {
 
 
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<p></p>	
-<br>
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
 
 <hr>
 
@@ -111,13 +114,11 @@ div {
 
 <h3>5. Santander</h3>
 
- <!--
- -->
-
-
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<p></p>		
-<br>
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+
 
 <hr>
 
@@ -131,8 +132,9 @@ div {
 
 
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<p></p>		
-<br>
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
 
 <hr>
 
@@ -148,8 +150,12 @@ div {
 
 
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<p></p>	
-<br>
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+
+
+
 
 	
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
