--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@ div {
 	
 <h3>Bon voyage...</h3>
 	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-
 <h4><audio controls><source src="06232022.mp3" type="audio/mpeg"></audio></h4>	
 
 <h4><audio controls><source src="message_from_dany.mp3" type="audio/mpeg"></audio></h4>	
 
 <h4><audio controls><source src="dany_chords.mp3" type="audio/mpeg"></audio></h4>		
+	
 <h4><audio controls><source src="happy-trails.mp3" type="audio/mpeg"></audio></h4>		
 	
+<h4><audio controls><source src="danys_chords_acoustic.mp3" type="audio/mpeg"></audio></h4>
 
 	
 	
