--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ div {
 
 <img src="europe_map.png" width="430" height="393" style = "display: block; margin-left: auto; margin-right: auto;"/>
 
-<bloquote>Silence is both porous and generous enough to receive both noise and no noise, and forms the ground from which we both see through the illusion and separation from God; and are trained by the ordeals of life rooted in the mystery in whom we live and move and have our being.</blockquote>
+<bloquote>Silence is both porous and generous enough to receive both noise and no noise, and forms the ground from which we both (1) see through the illusion and separation from God and (2) are trained by the ordeals of life rooted in the mystery in whom we live and move and have our being.</blockquote>
 <p align="right">&mdash;Fr. Martin Laird</p>	
 	
 <bloquote>We come from silence, but we are in sound; it is through sound that we go back to God.</blockquote>
