--- a/index.html
+++ b/index.html
@@ -58,7 +58,19 @@ div {
 
 <h4><audio controls><source src="London_train.mp3" type="audio/mpeg"></audio></h4>	
 	
+<img src="IMG_1943.jpeg" width="309" height="232" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<img src="IMG_1958.jpeg" width="309" height="232" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<img src="IMG_1948.jpeg" width="309" height="232" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<img src="IMG_1950.jpeg" width="309" height="232" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<img src="IMG_1954.jpeg" width="302" height="403" style = "display: block; margin-left: auto; margin-right: auto;"/>
 
+	
+
+
+
+
+	
+	
 
 <hr>
 
@@ -153,8 +165,8 @@ div {
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
 
-<h3>A few pictures...</h3>
 
+<!--
 
 <img src="" width="652" height="488" style = "display: block; margin-left: auto; margin-right: auto;"/>
 <p class="bottom-three" align="middle">image</p>
@@ -166,6 +178,7 @@ div {
 <p class="bottom-three" align="middle">image</p>
   
 <br>
+-->
 
 
 
