--- a/index.html
+++ b/index.html
@@ -59,15 +59,14 @@ div {
 <h4><audio controls><source src="London_train.mp3" type="audio/mpeg"></audio></h4>	
 	
 <img src="IMG_1943.jpeg" width="309" height="232" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>	
 <img src="IMG_1958.jpeg" width="309" height="232" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>
 <img src="IMG_1948.jpeg" width="403" height="302" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>
 <img src="IMG_1950.jpeg" width="309" height="232" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>
 <img src="IMG_1954.jpeg" width="302" height="403" style = "display: block; margin-left: auto; margin-right: auto;"/>
-
-	
-
-
-
 
 	
 	
@@ -78,7 +77,7 @@ div {
 
 
 
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="danyschords_ox.mp3" type="audio/mpeg"></audio></h4>	
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
 <h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
