--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@ div {
 <h3>2. Oxford</h3>
 
 
-
 <h4><audio controls><source src="danyschords_ox.mp3" type="audio/mpeg"></audio></h4>	
 <h4><audio controls><source src="dany_ox_message.mp3" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="ambient_day1.mp3" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="konrad.mp3" type="audio/mpeg"></audio></h4>	
 
 <hr>
+
 
 	
 	
