--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@ div {
 
 <h4><audio controls><source src="London_train.mp3" type="audio/mpeg"></audio></h4>	
 	
-<img src="IMG_1943.jpeg" width="309" height="232" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<img src="IMG_1943.jpeg" width="371" height="278" style = "display: block; margin-left: auto; margin-right: auto;"/>
 <br>	
-<img src="IMG_1958.jpeg" width="309" height="232" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<img src="IMG_1958.jpeg" width="371" height="278" style = "display: block; margin-left: auto; margin-right: auto;"/>
 <br>
 <img src="IMG_1948.jpeg" width="403" height="302" style = "display: block; margin-left: auto; margin-right: auto;"/>
 <br>
-<img src="IMG_1950.jpeg" width="309" height="232" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<img src="IMG_1950.jpeg" width="371" height="278" style = "display: block; margin-left: auto; margin-right: auto;"/>
 <br>
-<img src="IMG_1954.jpeg" width="302" height="403" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<img src="IMG_1954.jpeg" width="362" height="484" style = "display: block; margin-left: auto; margin-right: auto;"/>
 
 	
 	
@@ -81,6 +81,19 @@ div {
 <h4><audio controls><source src="ambient_day1.mp3" type="audio/mpeg"></audio></h4>	
 <h4><audio controls><source src="konrad.mp3" type="audio/mpeg"></audio></h4>	
 
+
+
+
+	
+<img src="boyle_hooke.jpg" width="403" height="302" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>
+<img src="ox-moon.jpg" width="302" height="403" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>
+<img src="ox-street.jpg" width="403" height="302" style = "display: block; margin-left: auto; margin-right: auto;"/>	
+<br>
+<img src="white-rabbit.jpg" width="403" height="302" style = "display: block; margin-left: auto; margin-right: auto;"/>	
+	
+	
 <hr>
 
 
