--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@ div {
 <h4><audio controls><source src="dany_ox_message.mp3" type="audio/mpeg"></audio></h4>	
 <h4><audio controls><source src="ambient_day1.mp3" type="audio/mpeg"></audio></h4>	
 <h4><audio controls><source src="konrad.mp3" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="ox_1.mp3" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="ox_2.mp3" type="audio/mpeg"></audio></h4>	
+
+
+
 
 
 
@@ -92,6 +97,10 @@ div {
 <img src="ox-street.jpg" width="403" height="302" style = "display: block; margin-left: auto; margin-right: auto;"/>	
 <br>
 <img src="white-rabbit.jpg" width="403" height="302" style = "display: block; margin-left: auto; margin-right: auto;"/>	
+<br>
+<img src="hammy_sapoz.jpeg" width="640" height="480" style = "display: block; margin-left: auto; margin-right: auto;"/>	
+<br>
+<img src="refleciton.jpeg" width="480" height="640" style = "display: block; margin-left: auto; margin-right: auto;"/>	
 	
 	
 <hr>
