--- a/index.html
+++ b/index.html
@@ -114,11 +114,17 @@ div {
  <!--
  -->
 
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-	
+
+
+
+
+
+<h4><audio controls><source src="london_st_pancras.mp3" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="paris_first.mp3" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="paris_motor_sounds.mp3" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="paris_night_sounds.mp3" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="paris_river_sounds.mp3" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="paris_so_true_bestie.mp3" type="audio/mpeg"></audio></h4>	
 <hr>
 
 
