--- a/index.html
+++ b/index.html
@@ -134,10 +134,13 @@ div {
  -->
 
 
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+
+
+
+<h4><audio controls><source src="bilbao_bells.mp3" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="bilbao_reggae.mp3" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="bilbao_vocals_guitar_street.mp3" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="bilbao_guitar_shop.mp3" type="audio/mpeg"></audio></h4>	
 
 <hr>
 
