--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ div {
 
 
 
+
 <h4><audio controls><source src="london_st_pancras.mp3" type="audio/mpeg"></audio></h4>	
 <h4><audio controls><source src="paris_first.mp3" type="audio/mpeg"></audio></h4>	
 <h4><audio controls><source src="paris_motor_sounds.mp3" type="audio/mpeg"></audio></h4>	
@@ -126,6 +127,28 @@ div {
 <h4><audio controls><source src="paris_river_sounds.mp3" type="audio/mpeg"></audio></h4>	
 <h4><audio controls><source src="paris_so_true_bestie.mp3" type="audio/mpeg"></audio></h4>	
 <hr>
+	
+<img src="paris1.jpg" width="403" height="302" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>
+<img src="paris2.jpg" width="302" height="403" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>
+<img src="paris3.jpg" width="403" height="302" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>	
+<img src="paris4.jpg" width="745" height="375" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>	
+<img src="paris5.jpg" width="403" height="302" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>
+<img src="paris6.jpg" width="302" height="403" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>
+<img src="paris7.jpg" width="302" height="403" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>
+<img src="paris8.jpg" width="302" height="403" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>
+<img src="paris9.jpg" width="403" height="302" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>	
+<img src="paris10.jpg" width="302" height="403" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>
+	
 
 
 <h3>4. Bilbao</h3>
