--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@ div {
 	
 <img src="IMG_1943.jpeg" width="371" height="278" style = "display: block; margin-left: auto; margin-right: auto;"/>
 <br>	
+ <!--	
 <img src="IMG_1958.jpeg" width="371" height="278" style = "display: block; margin-left: auto; margin-right: auto;"/>
 <br>
 <img src="IMG_1948.jpeg" width="403" height="302" style = "display: block; margin-left: auto; margin-right: auto;"/>
 <br>
+-->
 <img src="IMG_1950.jpeg" width="371" height="278" style = "display: block; margin-left: auto; margin-right: auto;"/>
 <br>
 <img src="IMG_1954.jpeg" width="362" height="484" style = "display: block; margin-left: auto; margin-right: auto;"/>
@@ -165,8 +167,24 @@ div {
 <h4><audio controls><source src="bilbao_vocals_guitar_street.mp3" type="audio/mpeg"></audio></h4>	
 <h4><audio controls><source src="bilbao_guitar_shop.mp3" type="audio/mpeg"></audio></h4>	
 
-<hr>
 
+
+<img src="bilbao_2.jpg" width="302" height="403" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>	
+<img src="bilbao_1.jpg" width="302" height="403" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>
+<img src="bilbao_3.jpg" width="302" height="403" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>
+<img src="bilbao_4.jpg" width="597" height="386" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br> 
+<img src="bilbao_6.jpg" width="403" height="302" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>	
+<img src="bilbao_7.jpg" width="1028" height="373" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>
+<img src="bilbao_5.jpg" width="302" height="403" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>	
+	
+<hr>
 
 
 <h3>5. Santander</h3>
