--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@ div {
 	
 <img src="IMG_1943.jpeg" width="371" height="278" style = "display: block; margin-left: auto; margin-right: auto;"/>
 <br>	
- <!--	
+	
 <img src="IMG_1958.jpeg" width="371" height="278" style = "display: block; margin-left: auto; margin-right: auto;"/>
 <br>
 <img src="IMG_1948.jpeg" width="403" height="302" style = "display: block; margin-left: auto; margin-right: auto;"/>
 <br>
--->
+
 <img src="IMG_1950.jpeg" width="371" height="278" style = "display: block; margin-left: auto; margin-right: auto;"/>
 <br>
 <img src="IMG_1954.jpeg" width="362" height="484" style = "display: block; margin-left: auto; margin-right: auto;"/>
@@ -188,49 +188,29 @@ div {
 
 
 <h3>5. Santander</h3>
-
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+	
+		
 
 
+<img src="santander_beach.jpeg" width="403" height="302" style = "display: block; margin-left: auto; margin-right: auto;"/>
+<br>		
+	
 <hr>
 
 
-
-
-<h3>6. Seville</h3>
-
- <!--
- -->
-
-
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-
-<hr>
-
-
-
-
-
-
+<!--
 <h3>7. Madrid</h3>
 
- <!--
+
+
+
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
+
+
  -->
-
-
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-
-
-
 
 	
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
