--- a/index.html
+++ b/index.html
@@ -190,53 +190,19 @@ div {
 <h3>5. Santander</h3>
 	
 		
+<h4><audio controls><source src="santander_beach.mp3" type="audio/mpeg"></audio></h4>	
 
 
 <img src="santander_beach.jpeg" width="403" height="302" style = "display: block; margin-left: auto; margin-right: auto;"/>
 <br>		
+
 	
-<hr>
-
-
-<!--
-<h3>7. Madrid</h3>
-
-
-
-
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-<h4><audio controls><source src="" type="audio/mpeg"></audio></h4>	
-
-
- -->
+<p align="middle"><iframe width="560" height="315" src="https://www.youtube.com/embed/zLwfAiqtyzQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>  
 
 	
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
 
-
-<!--
-
-<img src="" width="652" height="488" style = "display: block; margin-left: auto; margin-right: auto;"/>
-<p class="bottom-three" align="middle">image</p>
-
-<img src="" width="652" height="488" style = "display: block; margin-left: auto; margin-right: auto;"/>
-<p class="bottom-three" align="middle">image</p>
-
-<img src="" width="652" height="488" style = "display: block; margin-left: auto; margin-right: auto;"/>
-<p class="bottom-three" align="middle">image</p>
-  
-<br>
--->
-
-
-
-<!--
-<p align="middle"><iframe width="560" height="315" src="https://www.youtube.com/embed/X1UDHsGcSJk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>  
-<p align="middle">This is a video I made in spring 2021 (part of my honors capstone project) that features pictures from my travels in Spain.</p>
- -->
 
 
 </div>
